# Autonomous-CARLA

./: .gitignore  README.md  auto_labeler.py  autonomous_carla.py  carla_nn.py  data_collector.py  object_detection_nn.py  perception_algorithm.py  perception_stack.py  playground.py  requirements.txt  test_algorithms.py
CARLA/: sensor.py
CARLA/controller/: utils_test.py
WIP/: carla_nn.py  ground_truth_evaluation.py  hyperparameter_tuning.py  tv-training-code.py
pytorch_utils/: coco_eval.py  coco_utils.py  engine.py  presets.py
ros2/: README.md
ros2/install/: local_setup.sh  setup.sh
ros2/log/: latest_build  latest_list
ros2/src/carla_sensor_reader/: CMakeLists.txt  package.xml
ros2/src/install/: local_setup.sh  setup.sh
ros2/src/install/carla_sensor_reader/share/carla_sensor_reader/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2/src/install/carla_sensor_reader/share/carla_sensor_reader/cmake/: carla_sensor_readerConfig.cmake
ros2/src/log/: latest_build
